--- a/lib/confetti/templates/webos_appinfo.mustache
+++ b/lib/confetti/templates/webos_appinfo.mustache
@@ -1,6 +1,6 @@
 {
 	"id": "{{ app_id }}",
-	"version": "1.0.0",
+	"version": "{{ version }}",
 	"vendor": "Nitobi",
 	"type": "web",
 	"main": "index.html",
