--- a/lib/confetti/templates/android_manifest.mustache
+++ b/lib/confetti/templates/android_manifest.mustache
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="{{ package_name }}" android:versionName="1.1" android:versionCode="1">
+    package="{{ package_name }}"
+    android:versionName="{{ version }}"
+    android:versionCode="1">
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
