vendor method for webos apps

--- a/lib/confetti/templates/webos_appinfo.mustache
+++ b/lib/confetti/templates/webos_appinfo.mustache
@@ -1,7 +1,7 @@
 {
 	"id": "{{ app_id }}",
 	"version": "{{ version }}",
-	"vendor": "Nitobi",
+	"vendor": "{{ vendor }}",
 	"type": "web",
 	"main": "index.html",
 	"title": "{{ app_name }}",
