--- a/lib/confetti/templates/blackberry_widgets_config.mustache
+++ b/lib/confetti/templates/blackberry_widgets_config.mustache
@@ -11,6 +11,7 @@
 <feature id="phonegap" required="false" version="1.0.0"/>
 <access subdomains="true" uri="file:///store/home"/>
 <access subdomains="true" uri="file:///SDCard"/>
+<access subdomains="true" uri="*" />
 <icon rim:hover="false" src="resources/icon.png"/>
 <icon rim:hover="true" src="resources/icon_hover.png"/>
 <content src="index.html"/>
