BB widgets writes out license info now.

--- a/lib/confetti/templates/blackberry_widgets_config.mustache
+++ b/lib/confetti/templates/blackberry_widgets_config.mustache
@@ -6,7 +6,7 @@
 <name>{{ widget_name }}</name>
 <author href="{{ author_href }}" email="{{ author_email }}">{{ author_name }}</author>
 <description>{{ widget_description }}</description>
-<license></license>
+<license href="{{ license_href }}">{{ license_text }}</license>
 <feature id="blackberry.system" required="true" version="1.0.0.0"/>
 <feature id="phonegap" required="false" version="1.0.0"/>
 <access subdomains="true" uri="file:///store/home"/>
