--- a/lib/confetti/templates/blackberry_widgets_config.mustache
+++ b/lib/confetti/templates/blackberry_widgets_config.mustache
@@ -7,8 +7,17 @@
 <author href="{{ author_href }}" email="{{ author_email }}">{{ author_name }}</author>
 <description>{{ widget_description }}</description>
 <license href="{{ license_href }}">{{ license_text }}</license>
-<feature id="blackberry.system" required="true" version="1.0.0.0"/>
-<feature id="phonegap" required="false" version="1.0.0"/>
+<feature id="blackberry.system" required="true" version="1.0.0.0" />
+<feature id="phonegap" required="true" version="{{ phonegap_version }}" />
+<feature id="blackberry.find" required="true" version="1.0.0.0" />
+<feature id="blackberry.identity" required="true" version="1.0.0.0" />
+<feature id="blackberry.pim.Address" required="true" version="1.0.0.0" />
+<feature id="blackberry.pim.Contact" required="true" version="1.0.0.0" />
+<feature id="blackberry.io.file" required="true" version="1.0.0.0" />
+<feature id="blackberry.utils" required="true" version="1.0.0.0" />
+<feature id="blackberry.io.dir" required="true" version="1.0.0.0" />
+<feature id="blackberry.app" required="true" version="1.0.0.0" />
+<feature id="blackberry.app.event" required="true" version="1.0.0.0" />
 <access subdomains="true" uri="file:///store/home"/>
 <access subdomains="true" uri="file:///SDCard"/>
 <access subdomains="true" uri="*" />
