--- a/lib/confetti/templates/android_manifest.mustache
+++ b/lib/confetti/templates/android_manifest.mustache
@@ -21,6 +21,7 @@
     <application android:icon="@drawable/icon" android:label="@string/app_name"
     	android:debuggable="true">
         <activity android:name=".{{ class_name }}"
+                  android:screenOrientation="{{ app_orientations }}"
                   android:label="@string/app_name" android:configChanges="orientation|keyboardHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
