simplifying app_orientation(s) methods
also bumping up the specs a bit

--- a/lib/confetti/templates/blackberry_widgets_config.mustache
+++ b/lib/confetti/templates/blackberry_widgets_config.mustache
@@ -27,5 +27,5 @@
 <rim:loadingScreen backgroundColor="#000000" foregroundImage="resources/loading_foreground.png" onFirstLaunch="true">
   <rim:transitionEffect type="fadeOut"/>
 </rim:loadingScreen>
-<rim:orientation mode="{{app_orientations}}" />
+<rim:orientation mode="{{app_orientation}}" />
 </widget>
