removing the -iPad to help resolve some issues with running phonegap apps on the ipad

--- a/lib/confetti/templates/ios_info.mustache
+++ b/lib/confetti/templates/ios_info.mustache
@@ -43,6 +43,6 @@
     <key>NSMainNibFile</key>
     <string></string>
     <key>NSMainNibFile~ipad</key>
-    <string>-iPad</string>
+    <string></string>
 </dict>
 </plist>
