--- a/lib/confetti/templates/android_manifest.mustache
+++ b/lib/confetti/templates/android_manifest.mustache
@@ -28,6 +28,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.phonegap.DroidGap" android:label="@string/app_name">
+            <intent-filter>
+            </intent-filter>
+        </activity>
     </application>
 	<uses-sdk android:minSdkVersion="2" />
 
