--- a/lib/confetti/templates/ios_info.mustache
+++ b/lib/confetti/templates/ios_info.mustache
@@ -4,7 +4,9 @@
 <dict>
     <key>CFBundleIconFiles</key>
     <array>
-        <string>icon.png</string>
+        {{# icons }}
+        <string>{{ to_s }}</string>
+        {{/ icons }}
     </array>
     <key>UISupportedInterfaceOrientations~ipad</key>
     <array>
