adding preference for universal

--- a/lib/confetti/templates/ios_info.mustache
+++ b/lib/confetti/templates/ios_info.mustache
@@ -42,9 +42,9 @@
     <string>{{ bundle_version }}</string>
     <key>LSRequiresIPhoneOS</key>
     <true/>
-    <key>NSMainNibFile</key>
+    {{# devices }}
+    <key>{{ to_s }}</key>
     <string></string>
-    <key>NSMainNibFile~ipad</key>
-    <string></string>
+    {{/ devices }}
 </dict>
 </plist>
