--- a/lib/confetti/templates/symbian_wrt_info.mustache
+++ b/lib/confetti/templates/symbian_wrt_info.mustache
@@ -12,6 +12,10 @@
   <string>index.html</string>
   <key>MiniViewEnabled</key>
   <false/>
+  {{# permissions }}
+  <key>{{ name }}<key/>
+  <true/>
+  {{/ permissions }}
 </dict>
 </plist>
 
