changing symbian to include network by default

--- a/lib/confetti/templates/symbian_wrt_info.mustache
+++ b/lib/confetti/templates/symbian_wrt_info.mustache
@@ -12,10 +12,8 @@
   <string>index.html</string>
   <key>MiniViewEnabled</key>
   <false/>
-  {{# permissions }}
-  <key>{{ name }}<key/>
+  <key>AllowNetworkAccess<key/>
   <true/>
-  {{/ permissions }}
 </dict>
 </plist>
 
