[symbian] fixing type in info.plist file

--- a/lib/confetti/templates/symbian_wrt_info.mustache
+++ b/lib/confetti/templates/symbian_wrt_info.mustache
@@ -12,7 +12,7 @@
   <string>index.html</string>
   <key>MiniViewEnabled</key>
   <false/>
-  <key>AllowNetworkAccess<key/>
+  <key>AllowNetworkAccess</key>
   <true/>
 </dict>
 </plist>
