--- a/lib/confetti/templates/blackberry_widgets_config_legacy.mustache
+++ b/lib/confetti/templates/blackberry_widgets_config_legacy.mustache
@@ -7,9 +7,8 @@
 <author href="{{ author_href }}" email="{{ author_email }}">{{ author_name }}</author>
 <description>{{ widget_description }}</description>
 <license href="{{ license_href }}">{{ license_text }}</license>
-
 <feature id="blackberry.system" required="true" version="1.0.0.0" />
-<feature id="com.phonegap" required="true" version="{{ phonegap_version }}" />
+<feature id="phonegap" required="true" version="{{ phonegap_version }}" />
 <feature id="blackberry.find" required="true" version="1.0.0.0" />
 <feature id="blackberry.identity" required="true" version="1.0.0.0" />
 <feature id="blackberry.pim.Address" required="true" version="1.0.0.0" />
@@ -23,32 +22,14 @@
 <feature id="blackberry.invoke.MapsArguments" required="true" version="1.0.0.0" />
 <feature id="blackberry.system.event" />
 <feature id="blackberry.identity.phone" />
-
-<feature id="blackberry.media.camera" />
-<feature id="blackberry.ui.dialog" />
-
 <access subdomains="true" uri="file:///store/home"/>
 <access subdomains="true" uri="file:///SDCard"/>
 <access subdomains="true" uri="*" />
-
 <icon rim:hover="false" src="resources/icon.png"/>
 <icon rim:hover="true" src="resources/icon_hover.png"/>
-
 <content src="index.html"/>
-
-<rim:loadingScreen backgroundColor="#000000" 
-  foregroundImage="resources/loading_foreground.png" onFirstLaunch="true">
-    <rim:transitionEffect type="fadeOut"/>
+<rim:loadingScreen backgroundColor="#000000" foregroundImage="resources/loading_foreground.png" onFirstLaunch="true">
+  <rim:transitionEffect type="fadeOut"/>
 </rim:loadingScreen>
-
 <rim:orientation mode="{{app_orientation}}" />
-
-52a56,62
-<rim:permissions>
-    <rim:permit>use_camera</rim:permit>
-    <rim:permit>read_device_identifying_information</rim:permit>
-    <rim:permit>access_shared</rim:permit>
-    <rim:permit>read_geolocation</rim:permit>
-</rim:permissions>
-
 </widget>
