--- a/lib/confetti/templates/blackberry_widgets_config.mustache
+++ b/lib/confetti/templates/blackberry_widgets_config.mustache
@@ -9,7 +9,7 @@
 <license href="{{ license_href }}">{{ license_text }}</license>
 
 <feature id="blackberry.system" required="true" version="1.0.0.0" />
-<feature id="com.phonegap" required="true" version="{{ phonegap_version }}" />
+<feature id="com.phonegap" required="true" version="1.0.0" />
 <feature id="blackberry.find" required="true" version="1.0.0.0" />
 <feature id="blackberry.identity" required="true" version="1.0.0.0" />
 <feature id="blackberry.pim.Address" required="true" version="1.0.0.0" />
@@ -36,14 +36,13 @@
 
 <content src="index.html"/>
 
-<rim:loadingScreen backgroundColor="#000000" 
+<rim:loadingScreen backgroundColor="#000000"
   foregroundImage="resources/loading_foreground.png" onFirstLaunch="true">
     <rim:transitionEffect type="fadeOut"/>
 </rim:loadingScreen>
 
 <rim:orientation mode="{{app_orientation}}" />
 
-52a56,62
 <rim:permissions>
     <rim:permit>use_camera</rim:permit>
     <rim:permit>read_device_identifying_information</rim:permit>
