[ios] preference=fullscreen == UIStatusBarHidden

--- a/lib/confetti/templates/ios_info.mustache
+++ b/lib/confetti/templates/ios_info.mustache
@@ -46,5 +46,9 @@
     <key>{{ to_s }}</key>
     <string></string>
     {{/ devices }}
+    {{# fullscreen? }}
+    <key>UIStatusBarHidden</key>
+    <true/>
+    {{/ fullscreen? }}
 </dict>
 </plist>
