[blackberry] support for <rim:navigation />
through preference=disable-cursor

--- a/lib/confetti/templates/blackberry_widgets_config.mustache
+++ b/lib/confetti/templates/blackberry_widgets_config.mustache
@@ -42,6 +42,9 @@
 </rim:loadingScreen>
 
 <rim:orientation mode="{{app_orientation}}" />
+{{# no_cursor? }}
+<rim:navigation />
+{{/ no_cursor? }}
 
 <rim:permissions>
     <rim:permit>use_camera</rim:permit>
