--- a/lib/confetti/templates/blackberry_widgets_config_legacy.mustache
+++ b/lib/confetti/templates/blackberry_widgets_config_legacy.mustache
@@ -32,4 +32,7 @@
   <rim:transitionEffect type="fadeOut"/>
 </rim:loadingScreen>
 <rim:orientation mode="{{app_orientation}}" />
+{{# no_cursor? }}
+<rim:navigation />
+{{/ no_cursor? }}
 </widget>
