[ios] support for prerendered (no-gloss) icons

--- a/lib/confetti/templates/ios_info.mustache
+++ b/lib/confetti/templates/ios_info.mustache
@@ -50,5 +50,9 @@
     <key>UIStatusBarHidden</key>
     <true/>
     {{/ fullscreen? }}
+    {{# prerendered_icon? }}
+    <key>UIPrerenderedIcon</key>
+    <true/>
+    {{/ prerendered_icon? }}
 </dict>
 </plist>
