[bb] allow org.apache.cordova or com.phonegap

--- a/lib/confetti/templates/blackberry_widgets_config.mustache
+++ b/lib/confetti/templates/blackberry_widgets_config.mustache
@@ -9,7 +9,7 @@
 <license href="{{ license_href }}">{{ license_text }}</license>
 
 <feature id="blackberry.system" required="true" version="1.0.0.0" />
-<feature id="com.phonegap" required="true" version="1.0.0" />
+<feature id="{{ framework_namespace }}" required="true" version="1.0.0" />
 <feature id="blackberry.find" required="true" version="1.0.0.0" />
 <feature id="blackberry.identity" required="true" version="1.0.0.0" />
 <feature id="blackberry.pim.Address" required="true" version="1.0.0.0" />
