--- a/lib/confetti/templates/blackberry_widgets_config_legacy.mustache
+++ b/lib/confetti/templates/blackberry_widgets_config_legacy.mustache
@@ -24,7 +24,9 @@
 <feature id="blackberry.identity.phone" />
 <access subdomains="true" uri="file:///store/home"/>
 <access subdomains="true" uri="file:///SDCard"/>
-<access subdomains="true" uri="*" />
+{{# access }}
+<access subdomains="{{ subdomains }}" uri="{{ uri }}" />
+{{/ access }}
 <icon rim:hover="false" src="resources/icon.png"/>
 <icon rim:hover="true" src="resources/icon_hover.png"/>
 <content src="index.html"/>
