[bb] fix rim:navigation tag

--- a/lib/confetti/templates/blackberry_widgets_config_legacy.mustache
+++ b/lib/confetti/templates/blackberry_widgets_config_legacy.mustache
@@ -35,6 +35,6 @@
 </rim:loadingScreen>
 <rim:orientation mode="{{app_orientation}}" />
 {{# no_cursor? }}
-<rim:navigation />
+<rim:navigation mode="focus" />
 {{/ no_cursor? }}
 </widget>
