--- a/lib/confetti/templates/blackberry_widgets_config.mustache
+++ b/lib/confetti/templates/blackberry_widgets_config.mustache
@@ -45,7 +45,7 @@
 
 <rim:orientation mode="{{app_orientation}}" />
 {{# no_cursor? }}
-<rim:navigation />
+<rim:navigation mode="focus" />
 {{/ no_cursor? }}
 
 <rim:permissions>
