--- a/lib/confetti/templates/android_manifest.mustache
+++ b/lib/confetti/templates/android_manifest.mustache
@@ -18,7 +18,7 @@
     {{/ permissions }}
 
     <application android:icon="@drawable/icon" android:label="@string/app_name"
-    	android:debuggable="true">
+        android:debuggable="true" android:hardwareAccelerated="true">
         <activity android:name=".{{ class_name }}"
                   android:screenOrientation="{{ app_orientation }}"
                   android:label="@string/app_name" android:configChanges="orientation|keyboardHidden">
