[android] support for android-installLocation pref

--- a/lib/confetti/templates/android_manifest.mustache
+++ b/lib/confetti/templates/android_manifest.mustache
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="{{ package_name }}"
+    android:installLocation="{{ install_location }}"
     android:versionName="{{ version }}"
     android:versionCode="{{ version_code }}">
 
@@ -32,6 +33,6 @@
             </intent-filter>
         </activity>
     </application>
-	<uses-sdk android:minSdkVersion="2" />
+	<uses-sdk android:minSdkVersion="7" />
 
 </manifest>
