[android] minSdkVersion and maxSdkVersion support

--- a/lib/confetti/templates/android_manifest.mustache
+++ b/lib/confetti/templates/android_manifest.mustache
@@ -33,6 +33,6 @@
             </intent-filter>
         </activity>
     </application>
-	<uses-sdk android:minSdkVersion="7" />
+    <uses-sdk android:minSdkVersion="{{ min_sdk_version }}" {{ max_sdk_version_attribute }}/>
 
 </manifest>
