[android] add windowSoftInputMode as default

--- a/lib/confetti/templates/android_manifest.mustache
+++ b/lib/confetti/templates/android_manifest.mustache
@@ -3,7 +3,8 @@
     package="{{ package_name }}"
     android:installLocation="{{ install_location }}"
     android:versionName="{{ version }}"
-    android:versionCode="{{ version_code }}">
+    android:versionCode="{{ version_code }}"
+    android:windowSoftInputMode="adjustPan">
 
     <supports-screens
         android:largeScreens="true"
