[ios] support preference=ios-statusbarstyle

--- a/lib/confetti/templates/ios_info.mustache
+++ b/lib/confetti/templates/ios_info.mustache
@@ -54,5 +54,9 @@
     <key>UIPrerenderedIcon</key>
     <true/>
     {{/ prerendered_icon? }}
+    {{# statusbar_style }}
+    <key>UIStatusBarStyle</key>
+    <string>{{ to_s }}</string>
+    {{/ statusbar_style }}
 </dict>
 </plist>
