--- a/lib/confetti/templates/android_manifest.mustache
+++ b/lib/confetti/templates/android_manifest.mustache
@@ -34,6 +34,6 @@
             </intent-filter>
         </activity>
     </application>
-    <uses-sdk android:minSdkVersion="{{ min_sdk_version }}" {{ max_sdk_version_attribute }}/>
+    <uses-sdk android:minSdkVersion="{{ min_sdk_version }}" {{{ max_sdk_version_attribute }}}/>
 
 </manifest>
