--- a/lib/confetti/templates/android_manifest.mustache
+++ b/lib/confetti/templates/android_manifest.mustache
@@ -7,6 +7,7 @@
     android:windowSoftInputMode="adjustPan">
 
     <supports-screens
+        android:xlargeScreens="true"
         android:largeScreens="true"
         android:normalScreens="true"
         android:smallScreens="true"
