--- a/lib/confetti/templates/ios_info.mustache
+++ b/lib/confetti/templates/ios_info.mustache
@@ -46,6 +46,10 @@
     <key>{{ to_s }}</key>
     <string></string>
     {{/ devices }}
+    {{# exit_on_suspend }}
+    <key>UIApplicationExitsOnSuspend</key>
+    <false/>
+    {{/ exit_on_suspend }}
     {{# fullscreen? }}
     <key>UIStatusBarHidden</key>
     <true/>
