[ios_info] Fixed a couple of errors with exit-on-suspend
+ ios_info template exit_on_suspend? was missing question mark
+ exit_on_suspend should return true when exit-on-suspend is true

--- a/lib/confetti/templates/ios_info.mustache
+++ b/lib/confetti/templates/ios_info.mustache
@@ -46,10 +46,10 @@
     <key>{{ to_s }}</key>
     <string></string>
     {{/ devices }}
-    {{# exit_on_suspend }}
+    {{# exit_on_suspend? }}
     <key>UIApplicationExitsOnSuspend</key>
-    <false/>
-    {{/ exit_on_suspend }}
+    <true/>
+    {{/ exit_on_suspend? }}
     {{# fullscreen? }}
     <key>UIStatusBarHidden</key>
     <true/>
