--- a/lib/confetti/templates/android_manifest.mustache
+++ b/lib/confetti/templates/android_manifest.mustache
@@ -19,6 +19,9 @@
     {{# permissions }}
     <uses-permission android:name="android.permission.{{ name }}" />
     {{/ permissions }}
+    {{# features }}
+    <uses-feature android:name="android.hardware.{{ name }}" android:required="false"/>
+    {{/ features }}
 
     <application android:icon="@drawable/icon" android:label="@string/app_name"
         android:debuggable="true" android:hardwareAccelerated="true">
