--- a/lib/confetti/templates/android_manifest.mustache
+++ b/lib/confetti/templates/android_manifest.mustache
@@ -27,7 +27,8 @@
         android:debuggable="true" android:hardwareAccelerated="true">
         <activity android:name=".{{ class_name }}"
                   android:screenOrientation="{{ app_orientation }}"
-                  android:label="@string/app_name" android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale">
+                  android:label="@string/app_name" android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale"
+                  android:windowSoftInputMode="{{ window_soft_input_mode }}">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -38,6 +39,6 @@
             </intent-filter>
         </activity>
     </application>
-    <uses-sdk android:minSdkVersion="{{ min_sdk_version }}" {{{ max_sdk_version_attribute }}}/>
+    <uses-sdk android:minSdkVersion="{{ min_sdk_version }}" {{{ max_sdk_version_attribute }}}{{{ target_sdk_version_attribute }}}/>
 
 </manifest>
